--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -53,7 +53,7 @@
           color: rgba($chickadee-black, 0.6)
 
     @media (max-width: 1400px)
-      .way-to-help
+      .way-to-help-card
         width: 28.3%
 
         &:nth-child(4n+1)
@@ -62,7 +62,7 @@
           clear: left
 
     @media (max-width: 1050px)
-      .way-to-help
+      .way-to-help-card
         width: 45%
 
         &:nth-child(4n+1)
@@ -73,5 +73,5 @@
           clear: left
 
     @media (max-width: 700px)
-      .way-to-help
+      .way-to-help-card
         width: 95%
