Add ancestry links to research pages

--- a/creations/templates/all_research.html
+++ b/creations/templates/all_research.html
@@ -3,7 +3,7 @@
 
 {% block body_id %}research-categories{% endblock %}
 
-{% block page_title %}All Research Categories{% endblock %}
+{% block page_title %}All Research{% endblock %}
 
 {% block content %}
 
