--- a/website/templates/admin_bar.html
+++ b/website/templates/admin_bar.html
@@ -2,7 +2,7 @@
   <div id="admin-bar">
     <span class="user">{{ user.get_short_name }}</span>
     <a href="{% url 'admin:index' %}">Admin</a>
-    <a id="research-link" href="{% url 'research_categories_url' %}">
+    <a id="research-link" href="{% url 'all_research_url' %}">
       Research</a>
     <a class="logout" href="{% url 'logout_url' %}?next={{ request.path }}">
       Log Out</a>
