--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -13,7 +13,7 @@ Speaking Program: <i>{{ program.title }}</i>
   {{ program.description|markdown }}
 </div>
 
-{% if presentations %}
+{% if files %}
 <h3 class="page-subtitle">Presentation Files</h3>
 <div class="page-section">
   <ul>
