--- a/creations/templates/research_ancestry.html
+++ b/creations/templates/research_ancestry.html
@@ -11,7 +11,7 @@
 {% if final_link %}
 <a href="{{ category.get_absolute_url }}">
   {{ category.name }}</a>
-%rarr;
+&rarr;
 {% else %}
 {{ category.name }}
 {% endif %}
