Fix broken link

--- a/creations/templates/research.html
+++ b/creations/templates/research.html
@@ -37,7 +37,7 @@
 
 {% if research_item.file %}
 <div class="field">
-  <a href="{{ research_item.file }}">File</a>
+  <a href="{{ research_item.file.url }}">File</a>
 </div>
 {% endif %}
 
