--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -11,12 +11,14 @@ Speaking Program: <i>{{ program.title }}</i>
 
 <div class="page-section">
   {{ program.description|markdown }}
+  {% include "tags.html" with item=program field=True %}
 </div>
+
 
 {% if files %}
 <h3 class="page-subtitle">Presentation Files</h3>
 <div class="page-section">
-  <ul>
+  <ul id="files">
     {% for file in files %}
     <li>
       <a href="{{ file.file.url }}">
