--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -52,28 +52,12 @@
         </div>
         {% endif %}
 
-        <div><a href="{% url 'radio_program_url' id=program.id %}">
-            Permalink</a></div>
-
-        {% if program.species.all|length or program.tags.all|length %}
-        <div class="tags">
-          <span>Tags:</span>
-          <ul>
-          {% for bird in program.species.all %}
-            <li class="tag">
-              <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
-            </li>
-          {% endfor %}
-          {% for tag in program.tags.all %}
-            <li class="tag">
-              <span>
-                {{ tag }}
-              </span>
-            </li>
-          {% endfor %}
-          </ul>
+        <div>
+          <a href="{% url 'radio_program_url' id=program.id %}">
+            Permalink</a>
         </div>
-        {% endif %}
+
+        {% include "tags.html" with item=program %}
     </li>
     {% endfor %}
   </ul>
