--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -38,24 +38,6 @@
 </div>
 {% endif %}
 
-{% if program.species.all|length or program.tags.all|length %}
-<div class="field">
-  <span>Tags:</span>
-  <ul>
-  {% for bird in program.species.all %}
-    <li class="tag">
-      <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
-    </li>
-  {% endfor %}
-  {% for tag in program.tags.all %}
-    <li class="tag">
-      <span>
-        {{ tag }}
-      </span>
-    </li>
-  {% endfor %}
-  </ul>
-</div>
-{% endif %}
+{% include "tags.html" with item=program field=True %}
 
 {% endblock %}
