--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -528,22 +528,22 @@ html, body {
 
 #book img {
   width: 100%; }
-#book #tags {
+#book .tags {
   float: left;
   width: 100%;
   clear: both;
   margin-top: 36px; }
 
-#speaking ul, #speaking-program ul {
+#speaking #files, #speaking-program #files {
   list-style-position: inside;
   list-style-type: disc; }
-  #speaking ul li, #speaking ul ul, #speaking-program ul li, #speaking-program ul ul {
+  #speaking #files li, #speaking #files ul, #speaking-program #files li, #speaking-program #files ul {
     padding-left: 30px; }
-  #speaking ul ul, #speaking-program ul ul {
+  #speaking #files ul, #speaking-program #files ul {
     list-style-type: circle; }
-    #speaking ul ul ul, #speaking-program ul ul ul {
+    #speaking #files ul ul, #speaking-program #files ul ul {
       list-style-type: square; }
-      #speaking ul ul ul ul, #speaking-program ul ul ul ul {
+      #speaking #files ul ul ul, #speaking-program #files ul ul ul {
         list-style-type: disc; }
 
 #speaking-program img {
