--- a/creations/static/stylesheets/speaking.sass
+++ b/creations/static/stylesheets/speaking.sass
@@ -1,8 +1,11 @@
-#speaking, #speaking-program
-  #files
+#speaking
+  ul
     @include bulleted-list
 
 #speaking-program
+  #files
+    @include bulleted-list
+
   img
     position: relative
     width: 50%
