--- a/creations/templates/all_research.html
+++ b/creations/templates/all_research.html
@@ -10,7 +10,7 @@
 <ul>
 {% for category in categories %}
   <li>
-  <a href="{% url 'research_category_url' id=category.id %}">
+  <a href="{{ category.get_absolute_url }}">
     {{ category.name }}</a>
     {% if category.notes %}({{ category.notes|markdown }}){% endif %}
   </li>
