--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -15,6 +15,8 @@
       border-radius: $card-border-radius
       box-sizing: border-box
       box-shadow: 0px 1px 1px $chickadee-gray
+      background-size: cover
+      background-position: center center
 
       &:nth-child(4n+1)
         clear: left
