--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -582,7 +582,9 @@ html, body {
     padding: 20px;
     border-radius: 2px;
     box-sizing: border-box;
-    box-shadow: 0px 1px 1px #9ba5a9; }
+    box-shadow: 0px 1px 1px #9ba5a9;
+    background-size: cover;
+    background-position: center center; }
     #ways-to-help #all-ways-to-help .way-to-help-card:nth-child(4n+1) {
       clear: left; }
     #ways-to-help #all-ways-to-help .way-to-help-card:after {
