--- a/creations/templates/miscellany.html
+++ b/creations/templates/miscellany.html
@@ -1,11 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load markdown_deux_tags %}
+
 
 {% block body_id %}miscellany{% endblock %}
 
+
 {% block page_title %}Miscellaneous Projects{% endblock %}
 
+
 {% block content %}
+
 <div class="page-section">
   <h3 class="page-subtitle">Web Pages</h3>
   <ul>
@@ -36,4 +40,5 @@
     {% endfor %}
   </ul>
 </div>
+
 {% endblock %}
