--- a/creations/templates/writing.html
+++ b/creations/templates/writing.html
@@ -52,7 +52,10 @@
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Articles</h3>
+  <h3 class="page-subtitle">
+    Articles
+  </h3>
+
   <ul>
   {% for article in articles %}
     <li>
