--- a/waystohelp/templates/way_to_help.html
+++ b/waystohelp/templates/way_to_help.html
@@ -1,12 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load markdown_deux_tags %}
+
 
 {% block body_id %}way-to-help{% endblock %}
 
-{% block page_title %}{{ way.id }}. {{ way.title }}{% endblock %}
+
+{% block page_title %}
+{{ way.id }}. {{ way.title }}
+{% endblock %}
+
 
 {% block content %}
-
 {{ way.text|markdown }}
-
 {% endblock %}
