--- a/website/templates/admin/base_site.html
+++ b/website/templates/admin/base_site.html
@@ -1,7 +1,9 @@
-{% extends "admin/base.html" %}
+{% extends 'admin/base.html' %}
+
 
 {% block branding %}
 <h1 id="site-name">
-  <a href="{% url 'admin:index' %}">Admin for Laura's For The Birds</a>
+  <a href="{% url 'admin:index' %}">
+    Admin for Laura's For The Birds</a>
 </h1>
 {% endblock %}
