--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -1,8 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 
 {% block body_id %}birds{% endblock %}
 
+
 {% block page_title %}Bird Search Results{% endblock %}
+
 
 {% block content %}
 <ul id="search-results">
