--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,12 +1,16 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load markdown_deux_tags %}
 {% load thumbnail %}
 
+
 {% block body_id %}about{% endblock %}
+
 
 {% block page_title %}About Laura{% endblock %}
 
+
 {% block content %}
+
 <div class="page-section">
   <img id="primary-photo"
        src="{{ MEDIA_URL }}{{ laura.userprofile.main_photo.image }}" />
@@ -17,21 +21,30 @@
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Bio</h3>
+  <h3 class="page-subtitle">
+    Bio
+  </h3>
+
   <div id="bio" class="markdown">
     {{ laura.userprofile.bio|markdown }}
   </div>
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Awards</h3>
+  <h3 class="page-subtitle">
+    Awards
+  </h3>
+
   <div id="awards" class="markdown">
     {{ laura.userprofile.awards|markdown }}
   </div>
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Speaking Engagements</h3>
+  <h3 class="page-subtitle">
+    Speaking Engagements
+  </h3>
+
   <div>
     <a href="{% url 'speaking_url' %}">Click here</a>
     to learn about Laura's speaking engagements.
@@ -39,7 +52,10 @@
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Publicity Photos</h3>
+  <h3 class="page-subtitle">
+    Publicity Photos
+  </h3>
+
   <div id="publicity-photos">
     {% for photo in laura.userprofile.publicity_photos.all %}
       {% thumbnail photo.image "x120" as im %}
@@ -50,4 +66,5 @@
     {% endfor %}
   </div>
 </div>
+
 {% endblock %}
