--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include "head.html" %}
+  {% include 'head.html' %}
 
   <body id="{% block body_id %}{% endblock %}">
-    {% include "admin_bar.html" %}
-    {% include "header.html" %}
+    {% include 'admin_bar.html' %}
+
+    {% include 'header.html' %}
+
     <div id="content">
-      <h2 id="page-title">{% block page_title %}{% endblock%}</h2>
+      <h2 id="page-title">
+        {% block page_title %}{% endblock%}
+      </h2>
+
       {% block content %}{% endblock %}
     </div>
-    {% include "footer.html" %}
+
+    {% include 'footer.html' %}
   </body>
 </html>
