--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -50,6 +50,8 @@
       <input type="text" name="query">
       <input type="submit" value="Search for birds">
     </form>
-    Or, <a href="{% url 'birds_taxonomical_url' %}">browse taxonomically</a>
+
+    Or, <a href="{% url 'birds_taxonomical_url' %}">
+      browse taxonomically</a>
   </div>
 </div>
