--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,18 +1,23 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load markdown_deux_tags %}
+
 
 {% block body_id %}home{% endblock %}
 
+
 {% block content %}
 <div id="slideshow-wrapper">
-  <span>For the love, understanding, and protection of birds.</span>
-  <div style='position: relative; padding-bottom: 68%; height: 0; overflow: hidden;'>
+  <span>
+    For the love, understanding, and protection of birds.
+  </span>
+
+  <div style="position: relative; padding-bottom: 68%; height: 0; overflow: hidden;">
     <iframe
-      id='iframe'
-      src='http://flickrit.com/slideshowholder.php?height=67&size=big&setId=72157650016196242&thumbnails=0&transition=1&layoutType=responsive&sort=0'
-      scrolling='no'
-      frameborder='0'
-      style='width:100%; height:100%; position: absolute; top:0; left:0;'
+      id="iframe"
+      src="http://flickrit.com/slideshowholder.php?height=67&size=big&setId=72157650016196242&thumbnails=0&transition=1&layoutType=responsive&sort=0"
+      scrolling="no"
+      frameborder="0"
+      style="width:100%; height:100%; position: absolute; top:0; left:0;"
     ></iframe>
   </div>
 </div>
