--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 
 {% block content %}
 
@@ -8,6 +9,7 @@
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
   {% csrf_token %}
+
   <table>
     <tr>
       <td>{{ form.username.label_tag }}</td>
@@ -22,4 +24,5 @@
   <input type="submit" value="login" />
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
+
 {% endblock content %}
