--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -1,16 +1,23 @@
+{% load staticfiles %}
+
+
 <head>
-  <link href="{{ STATIC_URL }}images/favicon.ico" rel="icon"
+  <link href="{% static 'images/favicon.ico' %}" rel="icon"
     type="image/x-icon" />
-  <link href="{{ STATIC_URL }}stylesheets/styles.css"
+
+  <link href="{% static 'stylesheets/styles.css' %}"
     rel="stylesheet" type="text/css" />
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/birds.js"
+
+  <script src="{% static 'js/birds.js' %}"
     type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/creations.js"
+
+  <script src="{% static 'js/creations.js' %}"
     type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/waystohelp.js"
+
+  <script src="{% static 'js/waystohelp.js' %}"
     type="text/javascript"></script>
 
   <title>Laura Erickson's For the Birds</title>
