--- a/creations/templates/research_category.html
+++ b/creations/templates/research_category.html
@@ -6,7 +6,8 @@
 
 
 {% block page_title %}
-{% include 'research_ancestry.html' %}
+{% include 'research_ancestry.html' with item=category %}
+{{ category.name }}
 {% endblock %}
 
 
