--- a/creations/templates/research_ancestry.html
+++ b/creations/templates/research_ancestry.html
@@ -2,16 +2,8 @@
   All Research</a>
 &rarr;
 
-{% for ancestor in category.get_ancestors %}
+{% for ancestor in item.get_ancestors reversed %}
 <a href="{{ ancestor.get_absolute_url }}">
   {{ ancestor.name }}</a>
 &rarr;
 {% endfor %}
-
-{% if final_link %}
-<a href="{{ category.get_absolute_url }}">
-  {{ category.name }}</a>
-&rarr;
-{% else %}
-{{ category.name }}
-{% endif %}
